--- a/src/views/NeriView.css
+++ b/src/views/NeriView.css
@@ -109,7 +109,7 @@
 }
 
 .neri-search-add-btn:disabled {
-    opacity: 0.3;
+    opacity: 0.5;
     cursor: default;
 }
 
